sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:6: error: '<-' expected but ')' found.
    for (j < 0 to getNombreValeurs()-2) {
                                      ^AlgGnomeSort:15: error: illegal start of simple expression
  } while (swap==false)
  ^