sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var cpt=0
  var swap=true
  do {
    for (j < 0 to getNombreValeurs()-2) {
      for (i <- 0 to j){
        swap=false
        if (!plusPetit(i,i+1)) {
          echange(i,i+1)
          swap=true
        }
      }
    }
  } while (swap==false)
}